--- a/backend/package.json
+++ b/backend/package.json
@@ -22,7 +22,7 @@
     "express-session": "^1.18.2",
     "ioredis": "^5.8.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^9.0.0"
-    ,"nodemailer": "^6.9.3"
+    "mongoose": "^9.0.0",
+    "nodemailer": "^7.0.11"
   }
 }
