--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "ioredis": "^5.8.2",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.0.0",
-    "nodemailer": "^7.0.11"
+    "nodemailer": "^7.0.11",
+    "prom-client": "^14.0.1"
   }
 }
